# cluecards

./: .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc.json  Inference.md  README.md  eslint.config.js  flake.nix  index.html  manifest.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: build_and_test.yml  ci.yml
.yarn/patches/: @smui-select-npm-7.0.0-40cd9ea81d.patch  @smui-select-npm-8.0.0-beta.2-7a5cdf0318.patch
inference/: Cargo.toml  README.md
inference/src/: lib.rs
public/: manifest.json  probabilities.js  sw.js
scripts/: tsconfig.json
src/: App.svelte  app.css  cards.ts  inference-worker.ts  inference.ts  main.ts  sets.ts  stores.ts  types.ts  ui.ts
src/lib/: AddCards.svelte  AddSuggestion.svelte  InferTooltip.svelte  Players.svelte  Preferences.svelte  RestartGame.svelte  SetManager.svelte  SetSelector.svelte  SourceTooltip.svelte  Suggestions.svelte
src/lib/Configuration/: AddCards.svelte  Configuration.svelte  Players.svelte  Preferences.svelte  RestartGame.svelte  SetManager.svelte  SetSelector.svelte  index.ts
src/lib/GameTools/: index.ts  (+3 more)
src/theme/: _smui-theme.scss
test/: brokenCases.test.ts  inference.test.ts  utils.ts
test/states/: approximateMDSIssues.ts  index.ts
website/: .prettierignore  .prettierrc.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
website/scripts/: generate-test.ts
website/src/: app.html  inference-worker.ts  main.ts  stores.ts
website/test/: brokenCases.test.ts  inference.test.ts  randomGames.test.ts  utils.ts
(+43 files in other folders)
