[package]
publish = false
edition = "2021"
version = "0.0.0"
name = "inference"
authors = ["Adam Thompson-Sharpe <adamthompsonsharpe@gmail.com>"]
description = "WASM inference logic for Cluecards."
readme = "README.md"
repository = "https://github.com/MysteryBlokHed/cluecards"
license = "AGPL-3.0-only"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.13.0"
js-sys = "0.3.76"
mini-alloc = "0.6.0"
serde = "1.0.216"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
